# ESP32-Serial-OBD2-Gauge-Catalyst

./: .gitignore  README.md
document/enclosure/: ESP32 CYD Case.skb  ESP32 CYD Case.skp  ESP32_CYD_Case.stl  ESP32_CYD_Cover.stl
document/parts/: README.md
sketch/: platformio.ini
sketch/data/: pid_custom.csv  pid_custom.xlsx
sketch/include/: LGFX_CYD.h  lv_conf.h  pid_define.h  song.h
sketch/src/: accessory.cpp  accessory.h  elm327.cpp  elm327.h  main.cpp  nes_audio.cpp  nes_audio.h
sketch/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen_ScreenConfig.c  ui_Screen_ScreenConfig.h  ui_Screen_ScreenGauge.c  ui_Screen_ScreenGauge.h  ui_Screen_ScreenMonitor.c  ui_Screen_ScreenMonitor.h  ui_Screen_ScreenPerformance.c  ui_Screen_ScreenPerformance.h  ui_Screen_ScreenService.c  ui_Screen_ScreenService.h  ui_Screen_ScreenTitle.c  ui_Screen_ScreenTitle.h  ui_comp_hook.c  ui_events.cpp  ui_events.h  ui_font_segment_40.c  ui_helpers.c  ui_helpers.h  ui_img_alert_png.c  ui_img_gauge3_png.c  ui_img_ledring_png.c  ui_img_mil_png.c  ui_img_moon_png.c  ui_img_qrcode_png.c  ui_img_sun_png.c  ui_img_thailand_png.c  ui_img_vaandcob_png.c
sketch/test/: firmware.cpp  hmac.js
sketch/test/Asymmetric Cryptography/: private.pem  public.pem  server_sign.js  verification.cpp
squareline/: obd2_gauge_catalyst.sll  obd2_gauge_catalyst.slp  obd2_gauge_catalyst.spj  obd2_gauge_catalyst_events.py  project.info
squareline/assets/: ui_font_oswald_36.c  ui_font_oswald_36.fcfg  ui_font_segment_40.fcfg
www/: index.html
